--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,5 @@
-[package]
-name = "w4-pnger"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-clap = "3.2.16"
-png = "0.17.5"
-glob = "0.3.0"
-anyhow = "1.0.60"
+[workspace]
+members = [
+    "w4-pnger",
+    "tiny-bitfiddle"
+]
