--- a/w4-tiny-decomp/Cargo.toml
+++ b/w4-tiny-decomp/Cargo.toml
@@ -1,15 +1,10 @@
 [package]
-name = "w4-pnger"
+name = "w4-tiny-decomp"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "3.2.16"
-png = "0.17.5"
-glob = "0.3.0"
-anyhow = "1.0.60"
 tiny-bitfiddle = { path = "../tiny-bitfiddle" }
-w4-tiny-decomp = { path = "../w4-tiny-decomp" }
 w4-pnger-common = { path = "../w4-pnger-common" }
